fix mobile overflow bug

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -181,6 +181,7 @@ pre
   position: relative
   height: 300px
   pointer-events: none
+  overflow: hidden
   +breakpoint($md)
     position: absolute
     width: 100%
